# SysHeartRateTracker

./: CMakeLists.txt  README.md  main.cpp  mainwindow.cpp  mainwindow.h
